--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 
 
 :root {
-    --primary-color: #8236CB;
+    --primary-color: #3d57c7;
 }
 
 
@@ -37,6 +37,7 @@ button {
     margin: auto;
     display: block;
     background-color: var(--primary-color);
+    color: white;
 }
 
 #output-box {
